<resources>
    <string name="app_name">projectdocu pro</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="main_menu_drawer_open">Drawer Open</string>
    <string name="main_menu_drawer_close">Drawer Close</string>
    <string-array name="main_menu_entry_strings">
        <item>Camera</item>
        <item>Local images</item>
        <item>Select project</item>
        <item>Select plan</item>
        <item>Settings</item>
        <item>About projectdocu</item>
        <item>Help</item>
    </string-array>
    <string name="email">Login:</string>
    <string name="project">Project:</string>
    <string name="project_without_colon">Project</string>
    <string name="project_type_all">All Projects</string>
    <string name="project_type_favorites">Favorite projects</string>
    <string name="project_type_all_short">All</string>
    <string name="project_type_favorites_short">Favorites</string>
    <string name="plan_type_all">Select plan</string>
    <string name="plan_type_mobile">Favorite Plans</string>
    <string name="plan_type_all_short">All</string>
    <string name="plan_type_mobile_short">Plans</string>
    <string name="local_photos_title">Local images</string>
    <string name="settings_title">Settings</string>
    <string name="settings_camera_resolution">Camera resolution</string>
    <string name="settings_auto_gps_distance_title">Automatic photo plan location by</string>
    <string name="settings_camera_resolution_title">Camera Resolution</string>
    <string name="settings_auto_gps_distance_deactivated">Deaktivate</string>
    <string name="settings_resolution">Resolution</string>
    <string name="settings_deletetimer">Image deletion reminder</string>
    <string name="settings_compass_correction">Compass correction</string>
    <string-array name="settings_entry_strings">
        <item>Image direction through compass function (Only usable with GEO referenced plans)</item>
        <item>GPS aktivation</item>
        <item>Confirm location through GPS(Only useable with GEO referenced plans)</item>
        <item>Load latest project automatically</item>
        <item>Load latest plan automatically</item>
        <item>Syncronise images through mobile network</item>
        <item>Compress images throgh mobile network</item>
        <item>Syncronise images through WiFi (LAN)</item>
        <item>Compress images throgh WiFi (LAN)</item>
        <item>Reload images with original size through WiFi (LAN)</item>
        <item>Allow Synchronisation in Backend</item>
        <item>Always synchronise the newest images first</item>
        <item>Show Tag-Favorites in image view</item>
        <item>Camera resolution</item>
        <item>Auto-GPS-Distance</item>
        <item>Image deletion reminder</item>
        <item>Compass correction</item>
    </string-array>
    <string name="error_dialog_title">Error</string>
    <string name="attention_dialog_title">Caution</string>
    <string name="show_tutorial_dialog">Would you like to see the instruction?</string>
    <string name="user_logout_dialog">Do you really want to log out?</string>
    <string name="delete_location_dialog">Do you want to delete current location?</string>
    <string name="login_error">Login failed, please check your credentials.</string>
    <string name="unvalid_user_error">No user is logged in currently.</string>
    <string name="unvalid_project_error">No project is selected currently.</string>
    <string name="project_update_error">The selected project is not available because of network error.</string>
    <string name="plan_update_error">The selected plan is not available because of network error.</string>
    <string name="photo_not_found_error">The image is not found.</string>
    <string name="photo_in_sync_error">The image is in process of syncronization and could not be deleted.</string>
    <string name="send_error_report">Do you want to send an error report?</string>
    <string name="delete_photo_dialog">Do you really want to delete the image?</string>
    <string name="delete_flag_dialog">Do you really want to delete the location?</string>
    <string name="which_photos_to_delete_dialog">Which image do you want to delete?</string>
    <string name="project_not_fully_syncronized_dialog">Not all project details are synchronised! Do you still want to delete the project with all details?</string>
    <string name="plan_not_fully_syncronized_dialog">Not all plan details are synchronised! Do you still want to delete the plan with all details?</string>
    <string name="remove_syncronized_project_dialog">Do you want to delete the plan with all details?</string>
    <string name="remove_syncronized_plan_dialog">Do you want to delete the plan with all details?</string>
    <string-array name="delete_photo_options">
        <item>All</item>
        <item>Older than 1 week</item>
        <item>Older than 2 weeks</item>
        <item>Older than 3 weeks</item>
        <item>Older than 4 weeks</item>
        <item>Cancel</item>
    </string-array>
    <string name="toast_loading_project">Lode Project: </string>
    <string name="toast_loading_plan">Lode Plan: </string>
    <string name="toast_location_deleted">Location deleted</string>
    <string name="toast_location_saved">Location saved</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="photos_to_synchronize">Image(s) synchronise</string>
    <string name="photo_description_title">Image description</string>
    <string name="photo_memo_title">Voice recording</string>
    <string name="photo_tags_title">Image tagging</string>
    <string name="tags">Tags:</string>
    <string name="tags_type_all">All</string>
    <string name="tags_type_favorites">Favorites</string>
    <string name="photo_description_save_confirmation_text">Description saved!</string>
    <string name="memos_list_title_text">Voice recording</string>
    <string name="key_plan_list_array_adapter_plan_width">KEY_PLAN_WIDTH</string>
    <string name="key_plan_list_array_adapter_plan_height">KEY_PLAN_HEIGHT</string>
    <string name="key_plan_list_array_adapter_localpdphotoid">KEY_LOCALPDPHOTOID</string>
    <string name="login_screen">Login</string>
    <string name="project_selection">Select project</string>
    <string name="plan_selection">Select plan</string>
    <string name="show_plan">Plan view</string>
    <string name="show_photo">Image view</string>
    <string name="local_photos">Local images</string>
    <string name="settings">Settings</string>
    <string name="about_us">About projectdocu</string>
    <string name="help">Help</string>
    <string name="empty" />
    <string name="error_report_sent">Error report is sent to ProjectDocu. </string>
    <string name="error_report_failed">Error report could not be sent.</string>
    <string name="text_enter_username">User name</string>
    <string name="text_enter_password">Password</string>
    <string name="text_remember_logindata">Remember credentials</string>
    <string name="text_forgot_password">Forget password?</string>
    <string name="text_forgot_password_heading">Forget password</string>
    <string name="text_register_user">Register as new user?</string>
    <string name="toast_gps_out_of_range">Position not within the plan!</string>
    <string name="toast_gps_accuraccy_imprecise_info">GPS Position is not accurate!</string>
    <string name="toast_gps_accuraccy_info">GPS signal accuracy:</string>
    <string name="toast_plan_auto_gps_located">Image will be located to GPS position!</string>
    <string name="toast_gps_no_signal">No GPS signal!</string>
    <string name="toast_plan_no_gps_reference">Plan is not GPS referenced! GPS position could not be assigned.</string>
    <string name="toast_plan_no_auto_gps">Auto GPS is not possible. GPS not accurate!</string>
    <string name="toast_auto_position_off">Auto GPS deactivated</string>
    <string name="toast_auto_position_on">Auto GPS activated</string>
    <string name="toast_auto_direction_off">Auto compass deactivated</string>
    <string name="toast_auto_direction_on">Auto compass activated</string>
    <string name="toast_plan_not_loaded">No plan is loaded, Location is not possible!</string>
    <string name="sync_stats_header">Synchronisation status</string>
    <string name="sync_stats_photos_total">Total images:</string>
    <string name="sync_stats_photos_original">Images in original synchronised:</string>
    <string name="sync_stats_photos_reduced">Images compression synchronised:</string>
    <string name="sync_stats_photos_unsynced">Images aren\'t synchronised yet:</string>
    <string name="toast_project_not_syncronized">Project aren\'t synchronised yet!</string>
    <string name="toast_plan_not_syncronized">Plan aren\'t synchronised yet!</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_plans">Plans</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_defects_managment">Defects Management</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About Project Docu</string>
    <string name="menu_manual">Manual</string>
    <string name="place_label">City:</string>
    <string name="company_label">Company:</string>
    <string name="project_name_new">Projectname</string>
    <string name="info_heading">Info Heading</string>
    <string name="info_sub_heading">Info Sub Heading</string>
    <string name="enable_gps">Activate GPS</string>
    <string name="find_position_with_gps_only_only_for_geo_referenced_plans">Find position with GPS only (Only for Geo-referenced plans)</string>
    <string name="viewing_direction_through_compass_functions">Viewing direction through compass functions</string>
    <string name="gps_scale">GPS Scale</string>
    <string name="automatically_load_last_project">Automatically load last project</string>
    <string name="automatically_load_last_plan">Automatically load last plan</string>
    <string name="sync_photos_over_mobile_net">Sync photos over mobile net</string>
    <string name="sync_photos_before_sending_over_mobile_net">Sync photos before sending over mobile net</string>
    <string name="sync_photos_over_wlan">Sync photos over wlan</string>
    <string name="sync_photos_ascending">Sync photos ascending</string>
    <string name="sync_photos_before_sending_over_wlan">Sync photos before sending over wlan</string>
    <string name="reload_images_with_original_size_over_wlan">Reload images with original size over wlan</string>
    <string name="allow_sync_in_background">Allow sync in background</string>
    <string name="first_load_newest_images">First load newest images</string>
    <string name="buzzwords_favorites_view_in_preview">Buzzwords favorites view in preview</string>
    <string name="camera_resolution">Camera Resolution</string>
    <string name="logout_label">Logout</string>
    <string name="select_customer">Choose Customer</string>
    <string name="enter_project_name">Enter name</string>
    <string name="enter_city">Enter city</string>
    <string name="project_created_new">Create project</string>
    <string name="report">Report</string>
    <string name="minimize_photo_setting_message">Minimize photos via mobile data network</string>
    <string name="abous_us_new">Imprint\n\nprojectdocu GmbH\n\nBÃ¼ro B67\nFriedhofstraÃŸe 140\n45478 MÃ¼lheim an der Ruhr\nGermany\n\nPhone: +49 208-30 99 27-0\nFax: +49 208-30 99 27 -99\n\nE-mail: info@projectdocu.com\nInternet: www.projectdocu.com\n\nHRB 33902 Amtsgericht Duisburg\nCEO: AndrÃ© Henniger, Stefan Schroc\n\nUSt-IdNr.: DE287566381\n\nTerms and conditions\nhttps://projectdocu.com/information/\n\nData privacy\nhttps://projectdocu.com/datenschutz
</string>
</resources>