<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".activities.NewProjectActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/project_created_new"
        app:titleTextColor="@color/white_text_color"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_label"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black_text_color"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <Spinner
        android:id="@+id/customer_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:prompt="@string/select_customer"
        android:overlapAnchor="false"
        app:layout_constraintTop_toBottomOf="@+id/textview"/>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#dcdcdc"
        app:layout_constraintTop_toBottomOf="@id/customer_list" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_name_new"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black_text_color"
        app:layout_constraintTop_toBottomOf="@+id/view1"/>
    <EditText
        android:id="@+id/project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:hint="@string/enter_project_name"
        android:textColor="@color/black_text_color"
        android:background="@color/color_white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/textview1"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#dcdcdc"
        app:layout_constraintTop_toBottomOf="@id/project_name" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_label"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black_text_color"
        app:layout_constraintTop_toBottomOf="@+id/view2"/>
    <EditText
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:hint="@string/enter_city"
        android:textColor="@color/black_text_color"
        android:background="@color/color_white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/textview2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#dcdcdc"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

</androidx.constraintlayout.widget.ConstraintLayout>