<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/about_us"
        app:titleTextColor="@color/white_text_color" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/info_heading"
        android:textColor="@color/black_text_color"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/sub_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/info_sub_heading"
        android:textColor="@color/black_text_color"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_report_error"
        app:layout_constraintTop_toBottomOf="@+id/sub_heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/abous_us_new"
            android:textColor="@color/black_text_color"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/version"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="v-"
            android:textColor="@color/black_text_color"
            android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/tv_report_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_btn_with_blue_background"
        android:gravity="center"
        android:paddingLeft="76dp"
        android:paddingTop="16dp"
        android:paddingRight="76dp"
        android:paddingBottom="16dp"
        android:text="@string/report"
        android:textColor="@color/white_text_color"
        android:textSize="@dimen/size16"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />


    <include
        android:id="@+id/progress_bar_view"
        layout="@layout/progress_bar_material" />
</androidx.constraintlayout.widget.ConstraintLayout>